# PortfolioAnalyzer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Data/AssetClasses/: Crisil10YearGiltIndex.json  CrisilLiquidFundIndex.json  GoldPricePerTroyOz.json  Inflation.json  Nasdaq100TotalReturnsIndex.json  Nifty50TotalReturnsIndex.json
Data/Portfolios/: AllEquityPortfolio.json  Classic6040Portfolio.json  ConservativePortfolio.json  GoldenButterflyPortfolio.json  OptimizedPortfolio.json  PermanentPortfolio.json  TraditionalPortfolio.json  TriadPortfolio.json
Source/: AssetClass.cpp  AssetClass.hpp  AssetClassBuilder.cpp  AssetClassBuilder.hpp  CagrHeatMap.cpp  CagrHeatMap.hpp  Drawdowns.cpp  Drawdowns.hpp  HeatMap.cpp  HeatMap.hpp  Main.cpp  Percentile.cpp  Percentile.hpp  Portfolio.cpp  Portfolio.hpp  PortfolioBuilder.cpp  PortfolioBuilder.hpp  RollingReturns.cpp  RollingReturns.hpp  Types.hpp  Xirr.cpp  Xirr.hpp
